# resume-feedback

./: LICENSE  Makefile  README.md  generate.py  pyproject.toml  requirements.txt
demo/: output.txt
docs/: mkdocs.yml
docs/docs/: index.md
resume_feedback/: __init__.py  dataset.py  extract.py  features.py  label.py  parse.py  plots.py
resume_feedback/modeling/: predict.py  train.py
