[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "resume_feedback"
version = "0.0.1"
description = "Leveraging LLMs for resume analysis and feedback"
authors = [
  { name = "Abdessamed Dallaa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["resume_feedback"]
include = ["pyproject.toml", "resume_feedback/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["resume_feedback"]
force-sort-within-sections = true

